# send_gmail_python

./: Pipfile  README.md  help.md  mail_html.py  new_email.py  new_send_mail.py  pyproject.toml  send_email.py  send_mail_.py  t.json  t2.json  token.json  user_token.json
src/: .help.md.swp  h.md  new_email.py  save_gmail.py  send_mail_hostinger.py
trash/: fib.py  new_gmail.py  new_mail.py
